# connect4engine

./: .gitignore  Cargo.toml
opening_book/: README.txt
src/: book.rs  engine.rs  game.rs  lib.rs
