[package]
name = "connect4engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "connect4engine"
crate-type = ["cdylib"]

[[bin]]
name = "connect4enginebin"
path = "src/lib.rs"

[dependencies]
once_cell = "1.20.3"
wasm-bindgen = "0.2"

[target.wasm32-unknown-unknown]
rustflags = ["--cfg=web_sys_unstable_apis", "-C", "link-args=-z stack-size=64000000"]